k8s/gridops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridops-portal
  namespace: n8n # Colocate with DB and n8n for easier networking
  labels:
    app: gridops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridops
  template:
    metadata:
      labels:
        app: gridops
    spec:
      containers:
        - name: django
          image: jimoh1990/gridops:v7
          ports:
            - containerPort: 8000
